inter/Tests/Invalid/cantsubkind.intert
packagetype _plain
packagetype _code

package main _plain
	typename K_number = int32
	typename K_blurg <=  K_number
